// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentPrompt renders correctly 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Avatar
      avatarUrl="me.png"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Joe, how can you help?
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`CommentPrompt renders with comment text 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Avatar
      avatarUrl="me.png"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      A long enough comment that it will 
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Files renders correctly 1`] = `
<View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View>
      <Icon
        color={undefined}
        name="Document"
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={2}
      >
        foo.pdf
      </Text>
    </View>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View>
      <Icon
        color={undefined}
        name="Document"
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={2}
      >
        bar.zip
      </Text>
    </View>
  </View>
</View>
`;

exports[`PostDetails renders correctly 1`] = `
<View>
  <Connect(Comments)
    footer={
      <CommentPrompt
        commentEdit={undefined}
        currentUser={
          Object {
            "avatarUrl": "me.png",
            "firstName": [Function],
            "id": 123,
          }
        }
        newComment={undefined}
      />
    }
    header={
      <View>
        <Connect(PostHeader)
          communities={
            Array [
              Object {
                "slug": "foom",
              },
            ]
          }
          creator={
            Object {
              "id": "77",
              "name": "Houdini",
            }
          }
          date="2017-05-19T23:24:58Z"
          editPost={[Function]}
          goToCommunity={[Function]}
          postId="91"
          showMember={[Function]}
          slug="foom"
          type="request"
        />
        <Connect(PostImage)
          linked={true}
          postId="91"
        />
        <PostBody
          details="Lo"
          linkPreview={
            Object {
              "id": "34",
            }
          }
          showMember={[Function]}
          showTopic={[Function]}
          slug="foom"
          title="Hi"
        />
        <Files
          urls={
            Array [
              "http://foo.com/foo.pdf",
              "http://foo.com/bar.zip",
            ]
          }
        />
        <Connect(PostFooter)
          commenters={
            Array [
              Object {
                "id": 9,
              },
              Object {
                "id": 7,
              },
            ]
          }
          commentsTotal={12}
          currentUser={
            Object {
              "avatarUrl": "me.png",
              "firstName": [Function],
              "id": 123,
            }
          }
          id="91"
          myVote={true}
          showActivityLabel={true}
          votesTotal={8}
        />
      </View>
    }
    postId="91"
    postPending={false}
    showMember={[Function]}
    showTopic={[Function]}
    slug="foom"
  />
  <Connect(SocketSubscriber)
    id="91"
    type="post"
  />
</View>
`;
